--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div>
     <header>
         <img id="unLogo" src="images/unLogo.png" alt="">
-        <h1>Sustanability Advisory <br>Comittee</h1>
+        <h1>Sustainability Advisory <br> Committee</h1>
     </header>
     <nav>
         <ul>
