--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </header>
     <nav>
         <ul>
-            <li class=""><a href="index.html">Home</a></li>
-            <li class=""><a href="goal14.html">Life Below Water</a></li>
-            <li class=""><a href="goal8.html">Decent Work & Economic Growth</a></li>
-            <li class=""><a href="goal3.html">Good Health & Wellbeing</a></li>
-            <li class=""><a href="teamInfo.html">Team Information</a></li>
-            <li class=""><a href="signUp.html">Sign Up</a></li>
+            <li class="navi"><a href="index.html">Home</a></li>
+            <li class="navi"><a href="goal14.html">Life Below Water</a></li>
+            <li class="navi"><a href="goal8.html">Decent Work & Economic Growth</a></li>
+            <li class="navi"><a href="goal3.html">Good Health & Wellbeing</a></li>
+            <li class="navi"><a href="teamInfo.html">Team Information</a></li>
+            <li class="navi"><a href="signUp.html">Sign Up</a></li>
         </ul>
     </nav>
         <main>
