--- a/index.html
+++ b/index.html
@@ -11,18 +11,24 @@
     <header>
         <img id="unLogo" src="images/unLogo.png" alt="">
         <h1>Sustainability Advisory <br> Committee</h1>
+        <nav>
+            <ul>
+                <li class="navi"><a href="index.html">Home</a></li>
+                <li class="navi"><a href="goal14.html">Life Below Water</a></li>
+                <li class="navi"><a href="goal8.html">Decent Work & Economic Growth</a></li>
+                <li class="navi"><a href="goal3.html">Good Health & Wellbeing</a></li>
+                <li class="navi"><a href="teamInfo.html">Team Information</a></li>
+                <li class="navi"><a href="signUp.html">Sign Up</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li class="navi"><a href="index.html">Home</a></li>
-            <li class="navi"><a href="goal14.html">Life Below Water</a></li>
-            <li class="navi"><a href="goal8.html">Decent Work & Economic Growth</a></li>
-            <li class="navi"><a href="goal3.html">Good Health & Wellbeing</a></li>
-            <li class="navi"><a href="teamInfo.html">Team Information</a></li>
-            <li class="navi"><a href="signUp.html">Sign Up</a></li>
-        </ul>
-    </nav>
         <main>
+            <section>
+                <img id="unLogo" src="images/unLogo.png" alt="">
+                <h3>Sustainability Advisory <br> Committee</h3>
+                <p>This website seeks to present key information about UN Sustainable Development Goals. We offer you the opotunity to sign up to our website to recieve regular newsletters about combating climate change.</p>
+                <button type="button">Sign Up</button>
+            </section>
         </main>
         <footer>
             <p><small><i>Copyright &copy; <a href="mailto:SAC@gmail.com">Sustanability Advisory Comittee</a></i></small>
