--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 <body>
 <div>
     <header>
-        <img id="unLogo" src="images/unLogo.png" alt="">
-        <h1>Sustainability Advisory <br> Committee</h1>
+        <div id="webLogo">
+            <img id="unLogo" src="images/unLogo.png" alt="">
+            <h1>Sustainability Advisory <br> Committee</h1>
+        </div>
         <nav>
             <ul>
                 <li class="navi"><a href="index.html">Home</a></li>
-                <li class="navi"><a href="goal14.html">Life Below Water</a></li>
-                <li class="navi"><a href="goal8.html">Decent Work & Economic Growth</a></li>
-                <li class="navi"><a href="goal3.html">Good Health & Wellbeing</a></li>
-                <li class="navi"><a href="teamInfo.html">Team Information</a></li>
+                <li class="navi" title="Good Health & Well-Being"><a href="goal3.html">UN Goal 3</a></li>
+                <li class="navi" title="Decent Work & Economic Growth"><a href="goal8.html">UN Goal 8</a></li>
+                <li class="navi" title="Life Below Water"><a href="goal14.html">UN Goal 14</a></li>
+                <li class="navi"><a href="teamInfo.html">Team Info</a></li>
                 <li class="navi"><a href="signUp.html">Sign Up</a></li>
             </ul>
         </nav>
