--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <nav>
             <ul>
-                <li class="navi"><a href="index.html">Home</a></li>
+                <li class="activeNavi"><a href="index.html">Home</a></li>
                 <li class="navi" title="Good Health & Well-Being"><a href="goal3.html">UN Goal 3</a></li>
                 <li class="navi" title="Decent Work & Economic Growth"><a href="goal8.html">UN Goal 8</a></li>
                 <li class="navi" title="Life Below Water"><a href="goal14.html">UN Goal 14</a></li>
@@ -27,10 +27,16 @@
         <main>
             <section>
                 <img id="unLogo" src="images/unLogo.png" alt="">
+                <img id="photo1" src="images/1.png" alt="">
                 <h3>Sustainability Advisory <br> Committee</h3>
                 <p>This website seeks to present key information about UN Sustainable Development Goals. We offer you the opotunity to sign up to our website to recieve regular newsletters about combating climate change.</p>
                 <button type="button">Sign Up</button>
             </section>
+            <div id="textBox1">
+                <img id="photo2" src="images/2.png" alt="">
+                <h3>What are we about?</h3>
+                <p>This is a bunch of filler text, this is a bunch of filler text, this is a bunch of filler text, this is a bunch of filler text, this is a bunch of filler text, this is a bunch of filler text</p>
+            </div>
         </main>
         <footer>
             <p><small><i>Copyright &copy; <a href="mailto:SAC@gmail.com">Sustanability Advisory Comittee</a></i></small>
