--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </nav>
     </header>
         <main>
-            <section>
+            <section id="webDesc">
                 <img id="unLogo" src="images/unLogo.png" alt="">
                 <img id="photo1" src="images/1.png" alt="">
                 <h3>Sustainability Advisory <br> Committee</h3>
-                <p>This website seeks to present key information about UN Sustainable Development Goals. We offer you the opotunity to sign up to our website to recieve regular newsletters about combating climate change.</p>
+                <p>This website seeks to present key information about UN Sustainable Development Goals. We offer you the opotunity to sign up to our website to recieve regular newsletters about combating climate change. This is a bunch of filler text, this is a bunch of filler text, this is a bunch of filler text, this is a bunch of filler text, this is a bunch of filler text.</p>
                 <button type="button">Sign Up</button>
             </section>
             <div id="textBox1">
