--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sustanability Advisory Comittee</title>
+    <script src="https://kit.fontawesome.com/3e13c3f76f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="sac.css">
+    <script src="navBar.js" defer></script>
 </head>
 <body>
 <div>
@@ -12,6 +14,8 @@
         <div id="webLogo">
             <img id="unLogo" src="images/unLogo.png" alt="">
             <h1>Sustainability Advisory <br> Committee</h1>
+            <a id="navBar">
+                <i class="fa-solid fa-bars"></i>
         </div>
         <nav>
             <ul>
