fix navBar being too low and commented out js file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sustanability Advisory Comittee</title>
     <script src="https://kit.fontawesome.com/3e13c3f76f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="sac.css">
-    <script src="navBar.js" defer></script>
+<!--    <script src="navBar.js" defer></script>-->
 </head>
 <body>
 <div>
