--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/3e13c3f76f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="sac.css">
 <!--    <script src="navBar.js" defer></script>-->
-    <script src="underline.js" defer></script>
+    <script src=underline.js defer></script>
 </head>
 <body>
 <div>
