Initial goal8 page and css for all goal changes and change unLogo from id to class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div>
     <header>
         <div id="webLogo">
-            <img id="unLogo" src="images/unLogo.png" alt="">
+            <img class="unLogo" src="images/unLogo.png" alt="">
             <h1>Sustainability Advisory <br> Committee</h1>
             <a id="navBar">
                 <i class="fa-solid fa-bars"></i>
@@ -33,7 +33,7 @@
     </header>
         <main>
             <section id="webDesc">
-                <img id="unLogo" src="images/unLogo.png" alt="">
+                <img class="unLogo" src="images/unLogo.png" alt="">
                 <img id="photo1" src="images/1.png" alt="">
                 <h3>Sustainability Advisory <br> Committee</h3>
                 <p>This website seeks to present key information about UN Sustainable Development Goals. We offer you the opotunity to sign up to our website to recieve regular newsletters about combating climate change. This is a bunch of filler text, this is a bunch of filler text, this is a bunch of filler text, this is a bunch of filler text, this is a bunch of filler text.</p>
@@ -46,7 +46,7 @@
             </div>
         </main>
         <footer>
-            <p><small><i>Copyright &copy; <a href="mailto:SAC@gmail.com">Sustanability Advisory Comittee</a></i></small>
+            <p class="footer"><small><i>Copyright &copy; <a href="mailto:SAC@gmail.com">Sustanability Advisory Comittee</a></i></small>
         </footer>
 </div>
 </body>
