--- a/goal8.html
+++ b/goal8.html
@@ -32,10 +32,40 @@
         </nav>
     </header>
     <main>
-        <p>wow dude</p>
+        <h1 class="goalTitle">Decent Work & Economic Growth</h1>
+        <div class=goalMainText>
+            <p>The economy of Argentina is the second-largest
+                national economy in South America, behind Brazil. Argentina is
+                a developing country with a highly literate population, an
+                export-oriented agricultural sector, and a diversified industrial
+                base. Argentina benefits from rich natural resources. Argentina's
+                economic performance has historically been very uneven, with high
+                economic growth alternating with severe recessions, particularly
+                since the late twentieth century. Income maldistribution and poverty
+                have increased since this period. Early in the twentieth century,
+                Argentina had one of the ten highest per capita GDP levels globally.
+                It was on par with Canada and Australia, and had surpassed both France
+                and Italy. </p>
+            <div>
+            <img id="imfLogo" src="images/IMF.png">
+            <img id="gdpGraph" src="images/gdp-world-regions-stacked-area.png">
+            </div>
+            <p id="econSecond">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+                quae ab illo inventore veritatis et quasi architecto beatae
+                vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+                magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
+                porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+                consectetur, adipisci velit, sed quia non numquam eius modi
+                tempora incidunt ut labore et dolore magnam aliquam quaerat
+                voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
+                ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
+                consequatur?</p>
+        </div>
     </main>
     <footer>
-        <p><small><i>Copyright &copy; <a href="mailto:SAC@gmail.com">Sustanability Advisory Comittee</a></i></small>
+        <p class="footer"><small><i>Copyright &copy; <a href="mailto:SAC@gmail.com">Sustanability Advisory Comittee</a></i></small>
     </footer>
 </div>
 </body>
