fix goal8 unLogo

--- a/goal8.html
+++ b/goal8.html
@@ -13,7 +13,7 @@
 <div>
     <header>
         <div id="webLogo">
-            <img id="unLogo" src="images/unLogo.png" alt="">
+            <img class="unLogo" src="images/unLogo.png" alt="">
             <h1>Sustainability Advisory <br> Committee</h1>
             <a id="navBar">
                 <i class="fa-solid fa-bars"></i>
