--- a/goal8.html
+++ b/goal8.html
@@ -3,66 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Decent Work & Economic Growth</title>
+    <title>Sustanability Advisory Comittee</title>
     <script src="https://kit.fontawesome.com/3e13c3f76f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="sac.css">
-    <!--    <script src="navBar.js" defer></script>-->
-    <script src=underline.js defer></script>
+    <script src="navBar.js" defer></script>
+    <script src="underLine.js" defer></script>
 </head>
 <body>
 <div>
     <header>
-        <div id="webLogo">
-            <img class="unLogo" src="images/unLogo.png" alt="">
-            <h1>Sustainability Advisory <br> Committee</h1>
-            <a id="navBar">
-                <i class="fa-solid fa-bars"></i>
-            </a>
-        </div>
-        <nav>
-            <ul>
-                <li class="navi"><a href="index.html">Home</a></li>
-                <li class="navi" title="Good Health & Well-Being"><a href="goal3.html">UN Goal 3</a></li>
-                <li class="activeNavi" title="Decent Work & Economic Growth"><a href="goal8.html">UN Goal 8</a></li>
-                <li class="navi" title="Life Below Water"><a href="goal14.html">UN Goal 14</a></li>
-                <li class="navi"><a href="teamInfo.html">Team Info</a></li>
-                <li class="navi"><a href="signUp.html">Sign Up</a></li>
-
-            </ul>
+        <img id="webLogo" src="images/unLogo.png" alt="">
+        <h1>Sustainability Advisory<br>Committee</h1>
+        <nav id="mainNav">
+            <ul class="mainNav">
+                <li class="activeNav"><a href="index.html">Home</a></li>
+                <li class="nav" title="Good Health & Well-Being"><a href="goal3.html">UN Goal 3</a></li>
+                <li class="nav" title="Decent Work & Economic Growth"><a href="goal8.html">UN Goal 8</a></li>
+                <li class="nav" title="Life Below Water"><a href="goal14.html">UN Goal 14</a></li>
+                <li class="nav"><a href="teamInfo.html">Team Info</a></li>
+                <li class="nav"><a href="signUp.html">Sign Up</a></li></ul>
         </nav>
+        <a id="navBar">
+            <i class="fa-solid fa-bars"></i>
+        </a>
     </header>
-    <main>
-        <h1 class="goalTitle">Decent Work & Economic Growth</h1>
-        <div class=goalMainText>
-            <p>The economy of Argentina is the second-largest
-                national economy in South America, behind Brazil. Argentina is
-                a developing country with a highly literate population, an
-                export-oriented agricultural sector, and a diversified industrial
-                base. Argentina benefits from rich natural resources. Argentina's
-                economic performance has historically been very uneven, with high
-                economic growth alternating with severe recessions, particularly
-                since the late twentieth century. Income maldistribution and poverty
-                have increased since this period. Early in the twentieth century,
-                Argentina had one of the ten highest per capita GDP levels globally.
-                It was on par with Canada and Australia, and had surpassed both France
-                and Italy. </p>
-            <div>
-            <img id="imfLogo" src="images/IMF.png">
-            <img id="gdpGraph" src="images/gdp-world-regions-stacked-area.png">
+        <main>
+            <h1 class="goalTitle">Decent Work & Economic Growth</h1>
+            <div class=goalMainText>
+                <p>The economy of Argentina is the second-largest
+                    national economy in South America, behind Brazil. Argentina is
+                    a developing country with a highly literate population, an
+                    export-oriented agricultural sector, and a diversified industrial
+                    base. Argentina benefits from rich natural resources. Argentina's
+                    economic performance has historically been very uneven, with high
+                    economic growth alternating with severe recessions, particularly
+                    since the late twentieth century. Income maldistribution and poverty
+                    have increased since this period. Early in the twentieth century,
+                    Argentina had one of the ten highest per capita GDP levels globally.
+                    It was on par with Canada and Australia, and had surpassed both France
+                    and Italy. </p>
+                <div>
+                <img id="imfLogo" src="images/IMF.png">
+                <img id="gdpGraph" src="images/gdp-world-regions-stacked-area.png">
+                </div>
+                <p id="econSecond">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                    accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+                    quae ab illo inventore veritatis et quasi architecto beatae
+                    vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                    voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+                    magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
+                    porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+                    consectetur, adipisci velit, sed quia non numquam eius modi
+                    tempora incidunt ut labore et dolore magnam aliquam quaerat
+                    voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
+                    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
+                    consequatur?</p>
             </div>
-            <p id="econSecond">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-                quae ab illo inventore veritatis et quasi architecto beatae
-                vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
-                porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-                consectetur, adipisci velit, sed quia non numquam eius modi
-                tempora incidunt ut labore et dolore magnam aliquam quaerat
-                voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
-                ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-                consequatur?</p>
-        </div>
     </main>
     <footer>
         <p class="footer"><small><i>Copyright &copy; <a href="mailto:SAC@gmail.com">Sustanability Advisory Comittee</a></i></small>
