change comments to textarea

--- a/signUp.html
+++ b/signUp.html
@@ -42,7 +42,7 @@
                         <label for="email">Email Address: </label>
                         <input type="text" id="email" name="email" placeholder="Enter your Email Address" required><br><br>
                         <label for="comments">Comments: </label>
-                        <input type="text" id="comments" name="comments" placeholder="Enter any comments you have or type N/A" required><br><br>
+                        <textarea form="signUpForm" id="comments" name="comments" placeholder="Enter any comments you have or type N/A" required></textarea>
                         <button id="submitForm">Submit Form</button>
                     </fieldset>
                 </form>
