--- a/goal8.html
+++ b/goal8.html
@@ -29,6 +29,8 @@
     </header>
         <main>
             <h1 class="goalTitle">Decent Work & Economic Growth</h1>
+            <img id="vBanner" src="images/vBanner.png" alt="">
+            <img id="vBanner2" src="images/vBanner2.png" alt="">
             <div class=goalMainText>
                 <p>The economy of Argentina is the second-largest
                     national economy in South America, behind Brazil. Argentina is
