--- a/signUp.html
+++ b/signUp.html
@@ -35,6 +35,7 @@
                 <form action="" method="POST" id="signUpForm">
                     <fieldset>
                         <legend>Sign Up Form</legend>
+                        <img id="signUpImg" src="images/signUpImg.png" alt="">
                         <label for="fName">First Name: </label>
                         <input type="text" id="fName" name="fName" placeholder="Enter your First Name" required><br><br>
                         <label for="lName">Last Name: </label>
