--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div id=mainDesc></div>
                     <h2>Sustainability Advisory Committee</h2>
                     <p>This website seeks to present key information about UN Sustainable Development Goals. We offer you the opotunity to sign up to our website to recieve regular newsletters about combating climate change.</p>
-                    <button id="mainBtn">Sign Up</button>
+                    <a href="signUp.html"><button id="mainBtn">Sign Up</button></a>
             </section>
             <section id="bodySec">
                 <article class="service">
