--- a/goal14.html
+++ b/goal14.html
@@ -29,6 +29,8 @@
     </header>
     <main>
         <h1 class="goalTitle">Life Below Water</h1>
+        <img class="vBanner" src="images/vBanner.png" alt="">
+        <img class="vBanner2" src="images/vBanner2.png" alt="">
         <div class=goalMainText>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                 accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
@@ -43,8 +45,8 @@
                 ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
                 consequatur?</p>
             <div>
-                <img id="imfLogo" src="images/image.png">
-                <img id="gdpGraph" src="images/image.png">
+                <img class="image1" src="images/image.png">
+                <img class="image2" src="images/image.png">
             </div>
             <p id="econSecond">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                 accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
