teaminfo page text

--- a/teamInfo.html
+++ b/teamInfo.html
@@ -18,8 +18,8 @@
             <ul class="mainNav">
                 <li class="nav"><a href="index.html">Home</a></li>
                 <li class="nav" title="Good Health & Well-Being"><a href="goal3.html">UN Goal 3</a></li>
-                <li class="activeNav" title="Decent Work & Economic Growth"><a href="goal8.html">UN Goal 8</a></li>
-                <li class="nav" title="Life Below Water"><a href="goal14.html">UN Goal 14</a></li>
+                <li class="nav" title="Decent Work & Economic Growth"><a href="goal8.html">UN Goal 8</a></li>
+                <li class="activeNav" title="Life Below Water"><a href="goal14.html">UN Goal 14</a></li>
                 <li class="nav"><a href="teamInfo.html">Team Info</a></li>
                 <li class="nav"><a href="signUp.html">Sign Up</a></li></ul>
         </nav>
@@ -28,12 +28,23 @@
         </a>
     </header>
     <main>
-        <h1 class="goalTitle">Decent Work & Economic Growth</h1>
-        <img class="vBanner" src="images/vBanner.png" alt="">
-        <img class="vBanner2" src="images/vBanner2.png" alt="">
-        <p>
-
+        <h1 class="goalTitle">Team Information</h1>
+        <div class=goalMainText>
+            <p class="teamNames">Imogen</p>
+            <p>ae ab illo inventore veritatis et quasi architecto beatae vitae
+                dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+                aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+                eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
         </p>
+        </div>
+        <div class="goalMainText">
+            <p class="teamNames">Christopher</p>
+            <p> qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
+                sed quia non numquam eius modi tempora incidunt ut labore et dolore
+                magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis
+                nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
+                aliquid ex ea commodi consequatur? Quis autem</p>
+        </div>
 
     </main>
     <footer>
