add alt to image1 & image2

--- a/goal14.html
+++ b/goal14.html
@@ -45,8 +45,8 @@
                 ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
                 consequatur?</p>
             <div>
-                <img class="image1" src="images/image.png">
-                <img class="image2" src="images/image.png">
+                <img class="image1" src="images/image.png" alt="">
+                <img class="image2" src="images/image.png" alt="">
             </div>
             <p id="econSecond">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                 accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
