--- a/goal3.html
+++ b/goal3.html
@@ -45,7 +45,7 @@
                 ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
                 consequatur?</p>
             <div>
-                <img class="image1" src="images/image.png" alt="">
+                <img class="image1" src="images/image.png" >
                 <img class="image2" src="images/image.png" alt="">
             </div>
             <p id="econSecond">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
