add alt to goal8 vBanner

--- a/goal8.html
+++ b/goal8.html
@@ -29,7 +29,7 @@
     </header>
         <main>
             <h1 class="goalTitle">Decent Work & Economic Growth</h1>
-            <img class="vBanner" src="images/vBanner.png">
+            <img class="vBanner" src="images/vBanner.png" alt="">
             <img class="vBanner2" src="images/vBanner2.png" alt="">
             <div class=goalMainText>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem
