--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="sac.css">
     <script src="navBar.js" defer></script>
     <script src="underLine.js" defer></script>
+    <script src="notice.js" defer></script>
 </head>
 <body>
 <div>
