--- a/index.html
+++ b/index.html
@@ -22,34 +22,49 @@
                 <li class="nav" title="Decent Work & Economic Growth"><a href="goal8.html">UN Goal 8</a></li>
                 <li class="nav" title="Life Below Water"><a href="goal14.html">UN Goal 14</a></li>
                 <li class="nav"><a href="teamInfo.html">Team Info</a></li>
-                <li class="nav"><a href="signUp.html">Sign Up</a></li></ul>
+                <li class="nav"><a href="signUp.html">Sign Up</a></li>
+            </ul>
         </nav>
         <a id="navBar">
             <i class="fa-solid fa-bars"></i>
         </a>
     </header>
-        <main>
-            <section id="mainSec">
-                <img id="mainSecImg" src="images/banner.png" alt="">
-                <div id=mainDesc></div>
-                    <h2>Sustainability Advisory Committee</h2>
-                    <p>This website seeks to present key information about UN Sustainable Development Goals. We offer you the opotunity to sign up to our website to recieve regular newsletters about combating climate change.</p>
-                    <a href="signUp.html"><button id="mainBtn">Sign Up</button></a>
-            </section>
-            <section id="bodySec">
-                <article class="service">
-                    <h3>What are we about?</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                </article>
-                <article class="service">
-                    <h3>Our Goals</h3>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-                </article>
-            </section>
-        </main>
-        <footer>
-            <p><small><i>Copyright &copy; <a href="mailto:SAC@gmail.com">Sustanability Advisory Comittee</a></i></small>
-        </footer>
+    <main>
+        <section id="mainSec">
+            <img id="mainSecImg" src="images/banner.png" alt="">
+            <div id=mainDesc></div>
+            <h2>Sustainability Advisory Committee</h2>
+            <p>This website seeks to present key information about UN Sustainable Development Goals. We offer you the
+                opotunity to sign up to our website to recieve regular newsletters about combating climate change.</p>
+            <a href="signUp.html">
+                <button id="mainBtn">Sign Up</button>
+            </a>
+        </section>
+        <section id="bodySec">
+            <article class="service">
+                <h3>What are we about?</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
+                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            </article>
+            <article class="service">
+                <h3>Our Goals</h3>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters, as opposed to using 'Content here, content here', making it look like
+                    readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their
+                    default model text, and a search for 'lorem ipsum' will uncover many websites still in their
+                    infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose
+                    (injected humour and the like).</p>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p><small><i>Copyright &copy; <a href="mailto:SAC@gmail.com">Sustanability Advisory Comittee</a></i></small>
+    </footer>
 </div>
 </body>
 </html>
