--- a/teamInfo.html
+++ b/teamInfo.html
@@ -30,6 +30,7 @@
     <main>
         <h1 class="goalTitle">Team Information</h1>
         <div class=goalMainText>
+            <img class="pfp" src="images/pfp.png" alt="">
             <p class="teamNames">Imogen</p>
             <p>ae ab illo inventore veritatis et quasi architecto beatae vitae
                 dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
@@ -38,6 +39,7 @@
         </p>
         </div>
         <div class="goalMainText">
+            <img class="pfp" src="images/pfp.png" alt="">
             <p class="teamNames">Christopher</p>
             <p> qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
                 sed quia non numquam eius modi tempora incidunt ut labore et dolore
